gitops/generated/social/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social
  namespace: social

spec:
  replicas: 1

  selector:
    matchLabels:
      app: social

  template:
    metadata:
      labels:
        app: social

    spec:
      containers:
      - name: social

        image: ghcr.io/mastodon/mastodon:latest

        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi

        readinessProbe:
          tcpSocket:
            port: 3000

          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          tcpSocket:
            port: 3000

          initialDelaySeconds: 30
          periodSeconds: 20
