gitops/generated/social/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: social

spec:
  selector:
    app: social

  ports:
  - name: http
    port: 3000
    targetPort: 3000

  type: ClusterIP
