gitops/generated/social/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social
  namespace: social

spec:
  ingressClassName: traefik

  rules:
  - host: social.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: social
            port:
              number: 3000
